<resources>
    <string name="app_name">EarthQk</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">winTitle</string>
    <string name="button">View More...</string>
    <string name="hello">hello</string>
    <string name="more_information">More information</string>
    <string name="surrounding_cities">Surrounding Cities</string>
    <string name="close">CLOSE</string>
    <string name="show_text">Show Text</string>
    <string name="ss">Show List</string>
</resources>
