<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title"
                android:text="@string/more_information"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/popupListTitle"
                android:padding="10dp"
                android:textStyle="italic"
                android:text="@string/surrounding_cities"
                android:textSize="17sp"
                android:layout_below="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/popupList"
                android:textSize="17sp"
                android:text="@string/hello"
                android:layout_below="@+id/popupListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/popClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/title"
                android:layout_alignRight="@+id/title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="36dp"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />
            <WebView
                android:id="@+id/webview"
                android:layout_below="@+id/popupList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="WebViewLayout" />
            <Button
                android:id="@+id/dismiss"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/webview"
                android:layout_centerHorizontal="true"
                android:text="@string/close"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>



        </RelativeLayout>
    </ScrollView>
</LinearLayout>