<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/custom_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/winTitle"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@+id/imageView"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Magnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imageView"
                android:layout_below="@+id/winTitle"
                android:text="@string/hello"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/Magnitude"
                android:layout_alignBottom="@+id/Magnitude"
                android:layout_marginStart="7dp"

                android:background="@android:color/transparent"
                android:text="@string/button"
                android:visibility="visible"
                tools:visibility="visible" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>